force-app/main/default/objects/Non_Family_Linked_Contracts__c/Non_Family_Linked_Contracts__c.object-meta.xml
<CustomObject>
    <description>Used for Contract Management. Allows many Contracts to be tied one Project, and each Contract can be tied to multiple Projects.</description>
    <label>Non-Family Linked Contracts</label>
    <nameField>
        <displayFormat>NFLC-{000000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Family Linked Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>