force-app/main/default/objects/Non_Family_Linked_Contracts__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Non-Family Linked Contracts</relationshipLabel>
    <relationshipName>Non_Family_Linked_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>