force-app/main/default/objects/Non_Family_Linked_Contracts__c/fields/Contract_Project__c.field-meta.xml
<CustomField>
    <fullName>Contract_Project__c</fullName>
    <label>Contract Project</label>
    <referenceTo>Contract_Project__c</referenceTo>
    <relationshipLabel>Non-Family Linked Contracts</relationshipLabel>
    <relationshipName>Non_Family_Linked_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>