force-app/main/default/objects/Non_Family_Linked_Contracts__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <formula>Contract_Project__r.Project_Description__c</formula>
    <label>Project Description</label>
    <type>Text</type>
</CustomField>